syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option java_multiple_files = true;
option java_package = "group7.protobuf";
option java_outer_classname = "EventProto";

service EventService{
  rpc CreateEvent(CreateEventRequest) returns (CreateEventResponse){};
  rpc BookEvent(BookEventRequest) returns (BookEventResponse){};
}

message CreateEventRequest{
  string name = 1;
  string description = 2;
  string Entertainer = 3;
  string CafeOwner = 4;
  string Date=5;
}

message CreateEventResponse{
  string id = 1;
  string name = 2;
  string description = 3;
  string Entertainer = 4;
}

message GetEventRequest{
  string id = 1;
}

message GetEventResponse{
  string id = 1;
  string name = 2;
  string description = 3;
  string Entertainer = 4;
  string CafeOwner = 5;
  string Date=6;
}

message BookEventRequest{
  string id = 1;
  string FirstName = 2;
  string LastName = 3;
  string sits = 4;
  string Date=5;
}

message BookEventResponse{
  string id = 1;
  string FirstName = 2;
  string LastName = 3;
  string sits = 4;
}